<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/back_principal"
    tools:context=".TipoClientes.AgregarTipoCliente">

    <LinearLayout
        android:id="@+id/linearLayaout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/icono_back"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/agregar_tipo_cliente"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayaout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white"
                android:orientation="vertical"
                android:padding="20dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/etTipoCliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tipo_cliente"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnRegistrarTipo"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/registrar_tipo"
                    android:drawableEnd="@drawable/icono_ingresar"
                    android:layout_marginTop="30dp"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>



</RelativeLayout>